@@ -23,6 +23,11 @@
 	Call (featurep 'x) when faces.elc is dumped, not repeatedly
 	(myriad times) at image instantiation time.
 
+2009-08-15  It's me FKtPp ;)  <m_pupil@yahoo.com.cn>
+
+	* gnuserv.el (gnuserv-edit-files): Don't run goto line if the
+	gnuclient request to open a file only (a linenumber of nil).
+
 2009-08-14  Aidan Kehoe  <kehoea@parhasard.net>
 
 	* minibuf.el (read-from-minibuffer): 
